--- a/templates/book_details.gohtml
+++ b/templates/book_details.gohtml
@@ -1,34 +1,37 @@
 {{- /*gotype: github.com/wmolicki/bookler/handlers.EditBookFormData*/ -}}
 {{ define "yield"}}
   <h1 class="title">Book "{{ .Name }}"</h1>
-  <div class="field is-grouped is-grouped-multiline">
-      {{ range .Tags }}
-        <div class="control">
-          <div class="tags has-addons">
-            <a class="tag is-link">{{.}}</a>
-            <a class="tag is-delete"></a>
-          </div>
-        </div>
-      {{end}}
-  </div>
 
-  <div class="box">
-    <article class="media">
-      <div class="media-left">
-        <figure class="image is-128x128">
-          <img src="https://bulma.io/images/placeholders/128x128.png" alt="Image">
-        </figure>
+  <div class="columns">
+    <div class="column is-one-quarter">
+      <div class="block">
+      <figure class="image is-2by3">
+        <img src="/static/upload/{{ .Image }}" alt="Image" >
+      </figure>
       </div>
-      <div class="media-content">
-        <div class="content">
-          <p>
-            <strong>{{.Name}}</strong> <small>@johnsmith</small> <small>31m</small>
-            <br>
-            {{.Description}}
-          </p>
+      <div class="block">
+        <a href="/books/{{.ID}}/edit" class="button is-primary is-outlined">Edit</a>
+      </div>
+    </div>
+    <div class="column">
+      <div class="block">
+        <div class="field is-grouped is-grouped-multiline">
+            {{ range .Tags }}
+              <div class="control">
+                <div class="tags">
+                  <a class="tag is-link">{{.}}</a>
+                </div>
+              </div>
+            {{end}}
         </div>
       </div>
-    </article>
+      <div class="block">
+          {{ .Authors }}
+      </div>
+      <div class="block">
+          {{.Description}}
+      </div>
+    </div>
   </div>
 
   <script src="https://unpkg.com/vue"></script>
