fixed rest api to get some initial books loaded into the app

--- a/templates/book_add.gohtml
+++ b/templates/book_add.gohtml
@@ -26,6 +26,13 @@
         </div>
       </div>
 
+      <div class="field">
+        <label class="label">Tags</label>
+        <div class="control">
+          <input name="tags" class="input" type="text" value="{{.Tags}}" placeholder="separate by comma to add multiple">
+        </div>
+      </div>
+
       <button type="submit" class="button is-primary is-outlined">Submit</button>
     </form>
 {{end}}
