--- a/templates/book_edit.gohtml
+++ b/templates/book_edit.gohtml
@@ -31,7 +31,7 @@
     <div class="field">
       <label class="label">Tags</label>
       <div class="control">
-        <input name="tags" class="input" type="text" value="{{.Tags}}">
+        <input name="tags" class="input" type="text" value="{{.Tags}}" placeholder="separate by comma to add multiple">
       </div>
     </div>
 
