--- a/templates/layouts/bulma.gohtml
+++ b/templates/layouts/bulma.gohtml
@@ -25,6 +25,8 @@
 
   <script src="https://apis.google.com/js/platform.js" async defer></script>
   <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js" async defer></script>
+  <script src="https://cdn.jsdelivr.net/npm/lodash@4.17.21/lodash.min.js"></script>
+
   </body>
   </html>
 {{ end }}
