added scoring display and some minor stuff

--- a/templates/book_edit.gohtml
+++ b/templates/book_edit.gohtml
@@ -17,7 +17,7 @@
     <div class="field">
       <label class="label">Description</label>
       <div class="control">
-        <input name="description" class="input" type="text" value="{{.Description}}">
+        <textarea name="description" class="textarea">{{.Description}}</textarea>
       </div>
     </div>
 
